syntax = "proto3";

package rpc;

service Threats {
  rpc CreateThreat (Threat) returns (Threat);
}

message Threat {
  string monsterName = 1;
  string dangerLevel = 2;
  Location location = 3;
}

message Location {
  float lat = 1;
  float lng = 2;
}

